[package]
name = "zipson-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
indexmap = "2.6.0"
leptos = { version = "0.6.15", features = ["csr"] }
serde = "1.0.210"
serde_json = "1.0.128"
serde_zipson = { git = 'https://github.com/zoryamba/serde_zipson.git' }
log = "0.4.22"
anyhow = "1.0.89"
web-time = "1.1.0"
